tests/repr/duplicate-repr-1.stderr
error: encountered duplicate `#[repr(uN)]` parameter: duplicate set to #[repr(u32)]
 --> $DIR/duplicate-repr-1.rs:5:8
  |
5 | #[repr(u32)]
  |        ^^^

error: previous `#[repr(uN)]` parameter here
 --> $DIR/duplicate-repr-1.rs:4:8
  |
4 | #[repr(u32)]
  |        ^^^
